# spotantic-mcp

./: .commitlintrc.yml  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: personal-dj.agent.md
.github/workflows/: commit-lint.yml  pre-commit.yml  release-and-publish.yml  run-tests.yml
scripts/: authorize.py
src/spotantic_mcp/: _app_context.py  _setup_spotantic_client.py  server.py
src/spotantic_mcp/_spotantic_client/: __init__.py  _create_spotantic_client.py
src/spotantic_mcp/_spotantic_client/_auth_managers/: __init__.py  _auth_code_flow_manager.py  _auth_code_pkce_flow_manager.py  _auth_manager_factory.py  _client_credentials_flow_manager.py  _types.py
src/spotantic_mcp/tools/: __init__.py  _mcp_tools.py  _tool_group.py  _tool_types.py
src/spotantic_mcp/tools/endpoints/: __init__.py  _endpoint_tools.py  _handle_endpoint_errors.py
src/spotantic_mcp/tools/endpoints/_views/: __init__.py  _base_view.py  _currently_playing_item_view.py  _device_view.py  _episode_view.py  _get_user_queue_response_view.py  _paged_result_view.py  _paged_result_with_cursors_view.py  _play_history_view.py  _playback_state_view.py  _playlist_base_view.py  _playlist_summary_view.py  _playlist_track_view.py  _playlist_view.py  _saved_album_view.py  _saved_episode_view.py  _saved_show_view.py  _saved_track_view.py  _search_for_item_response_view.py  _simplified_album_view.py  _simplified_artist_view.py  _simplified_episode_view.py  _simplified_playlist_view.py  _simplified_show_view.py  _simplified_track_view.py  _track_view.py  _user_view.py
src/spotantic_mcp/tools/endpoints/albums/: __init__.py  _check_user_saved_albums.py  _endpoint_tools.py  _get_album.py  _get_album_artists.py  _get_album_tracks.py  _get_new_releases.py  _get_several_albums.py  _get_user_saved_albums.py  _remove_user_saved_albums.py  _save_albums_for_current_user.py
src/spotantic_mcp/tools/endpoints/artists/: __init__.py  _endpoint_tools.py  _get_artist.py  _get_artist_albums.py  (+2 more)
tests/: conftest.py
tests/integration/: test_spotantic_client_setup.py
tests/unit/: test_auth_managers.py  test_server.py  test_spotantic_client_setup.py  test_tool_group.py
tests/unit/tools/endpoints/: test_handle_endpoint_errors.py
(+109 files in other folders)
