[project]
name = "spotantic-mcp"
version = "0.1.0"
authors = [
  { name="Sebastian Domagała"},
]
description = "MCP client for Spotantic Spotify API async-client"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["spotify", "async", "api-client", "asyncio", "mcp"]
license="MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "spotantic>=0.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[project.scripts]
spotantic-mcp-server = "spotantic_mcp.server:main"

[project.urls]
"Homepage" = "https://github.com/domagalasebastian/spotantic-mcp"
"Bug Tracker" = "https://github.com/domagalasebastian/spotantic-mcp/issues"
"Questions" = "https://github.com/domagalasebastian/spotantic-mcp/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotantic_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "Q", "I", "RUF022"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]
"__init__.py" = ["D"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["spotantic_mcp"]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
exclude = ["**/__pycache__", ".venv", "**/node_modules", "**/.*"]
venvPath = "."
venv = ".venv"

[tool.pytest]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--import-mode=importlib",
]
testpaths = ["tests"]
asyncio_mode = "auto"
